kafka-msg-chart/templates/kafka-consumer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka-consumer
    labels:
      app: kafka-app
      istio-injection: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: polasomeshwar/kafka-consumer:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
