kafka-msg-chart/templates/kafka-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kafka-consumer-service
spec:
  type: NodePort
  selector:
    app: kafka-consumer
  ports:
    - port: 8080
      targetPort: 8080
