kafka-msg-chart/templates/virtaulService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-virtualservice
spec:
  hosts:
  - "kafka.example.com"  # replace with your actual hostname
  gateways:
  - kafka-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host:  kafka-consumer-service.default.svc.cluster.local
          port:
            number: 8080
      rewrite:
        uri: "/"
        authority:  kafka-consumer-service.default.svc.cluster.local:8080
