kafka-msg-chart/templates/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: user-check
spec:
  selector:
    matchLabels:
      app: kafka-app
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
